--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "async": "~0.2.8",
     "express": "~3.2.4",
+    "node-markdown": "^0.1.1",
     "socket.io": "~0.9.14"
   }
 }
